src/scss/layout/_layout.scss
// Layout styles.
@import "header";
@import "footer";

// Sticky footer. See https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
#defaultContainer {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

.content-wrapper {
	flex: 1;
	font-size: rem(14);
}

main {
	margin: 0 auto;
	max-width: 75ch;
	width: 100%;
}

article {
	padding: rem(0) rem(27) rem(27) rem(27);

	h2:not(.h3) {
		border-bottom: rem(5) solid $gold;
	}

	.api-content {
		display: block;

		&::after {
			clear: both;
			content: "";
			display: table;
		}
	}
}

// style for centering children of some buttons (#939)
%has-vertically-centered-children {
	align-items: center;
	display: flex;
}

// WP customized styles
.has-small-font-size {
	font-size: 84%;
}

.has-large-font-size {
	font-size: 126%;
}

.has-larger-font-size {
	font-size: 168%;
}

// WP styles for vertically aligning text within Media & Text blocks
.image-and-text--vertical-top .image-and-text__content {
	align-self: start;
}

.image-and-text--vertical-center .image-and-text__content {
	align-self: center;
}

.image-and-text--vertical-bottom .image-and-text__content {
	align-self: end;
}

// WP styles for horizontally aligning text within Media & Text blocks
.has-text-align-left {
	text-align: left;
}

.has-text-align-center {
	text-align: center;
}

.has-text-align-right {
	text-align: right;
}

figure {
	display: table;
	margin-left: auto;
	margin-right: auto;
}

p img {
	height: auto;
	max-width: 100%;
}

// Base styling for media and text block
.image-and-text {
	display: grid;

	.image-and-text__content {
		margin-left: rem(25);
	}

	.image-and-text__media {
		align-self: center;
	}

	img {
		height: auto;
		width: 100%;
	}
}

// Styling for media and text block with media on the left
.image-and-text--image-left {
	grid-template-columns: 15% auto;
}

// Styling for media and text block with media on the right
.image-and-text--image-right {
	.image-and-text__media {
		grid-column: 2;
		grid-row: 1;
	}

	.image-and-text__content {
		grid-column: 1;
		grid-row: 1;
		margin-left: 0;
	}
}

.embed--youtube {
	min-width: 100%;
}

// Special styling rules for homepage content
article .homepage-content {
	// removes underline for "non-h3" h2's
	h2 {
		border: none;
	}

	// The folowing CSS rule ensures video content is the width of the viewport in mobile and iPad views
	.embed--youtube {
		// not yet supported in Safari. for support details, see:
		// https://caniuse.com/mdn-css_properties_aspect-ratio
		aspect-ratio: 16 / 9;
		display: block;
		margin-left: $full-width-video-margins;
		margin-right: $full-width-video-margins;
		position: relative;

		// fallback for aspect-ratio
		@supports not (aspect-ratio: auto) {
			height: 0;
			overflow: hidden;
			padding-top: 56.25%; // 16:9
			position: relative;
		}
	}

	.embed--youtube iframe {
		height: 100%;
		left: 0;
		position: absolute;
		top: 0;
		width: 100%;

		// fallback for aspect-ratio
		@supports not (aspect-ratio: auto) {
			left: 50%;
			position: absolute;
			top: 50%;
			transform: translate(-50%, -50%);
		}
	}
}

video {
	max-height: rem(580);
	width: 100%;
}

figcaption {
	caption-side: bottom;
	display: table-caption;
	font-size: rem(14);
	font-style: italic;
	padding: 1rem 0;
	text-align: center;
}

// Hide an element visually without hiding it from screen readers
// Reference: https://tailwindcss.com/docs/screen-readers/#app
.screen-reader-only {
	border-width: 0;
	clip: rect(0, 0, 0, 0);
	height: rem(1);
	margin: rem(-1);
	overflow: hidden;
	padding: 0;
	position: absolute;
	white-space: nowrap;
	width: rem(1);
}

@include breakpoint-up(lg) {
	body {
		background-position: center;
	}

	.content-wrapper {
		display: grid;
		font-size: rem(18);
		grid-template-columns: 1fr minmax(75ch, 130ch) 1fr;
		grid-template-rows: auto auto;
	}

	main {
		background-color: $white;
		max-width: 130ch;

		article {
			padding: rem(1) rem(60);
			padding-bottom: rem(62);
		}

		// WP customized styles for Desktop and iPad Pro views
		.embed--youtube {
			min-width: auto;
		}

		// Styling for media and text block with media on the left
		.image-and-text--image-left {
			.image-and-text__content {
				margin-left: rem(25);
			}

			img {
				height: 100%;
				width: 100%;
			}
		}

		// Styling for media and text block with media on the right
		.image-and-text--image-right {
			.image-and-text__content {
				margin-left: 0;
				margin-right: rem(25);
			}
		}

		.embed--youtube iframe {
			height: rem(326);
			width: rem(580);
		}

		// Special styling rules for homepage content
		article .homepage-content {
			// to make the YouTube embed full-width
			.embed--youtube {
				margin-left: $full-width-video-widescreen-margins;
				margin-right: $full-width-video-widescreen-margins;
			}
		}
	}
}

@include breakpoint-up(xl) {
	// When screen sizes >= the iPad Pro landscape mode, use larger sizes for embedded media elements that
	// are aligned left or right.
	.alignleft,
	.alignright {
		.wp-block-embed__wrapper iframe {
			height: rem(326);
			width: rem(580);
		}
	}
}

